test/e2e/fail_compile/const_eval/recursive_constraint_limit.cst
struct Wrap<T> {
    value: T,
}

fn expand<T>() -> bool where expand::<Wrap<T>>() {
    true
}

fn main() {
    expand::<num>();
}
